--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,13 +1,40 @@
 <section class="orders-show">
-
   <header class="page-header">
     <h1>Order #<%= @order.id %></h1>
   </header>
 
   <div class="order-summary jumbotron">
     <h4>Thank you for your order!</h4>
+    <h5>Email: <%= @order.email %></h5>
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th>Product</th>
+          <th>Description</th>
+          <th>Quantity</th>
+          <th>Price</th>
+        <tr>
+      </thead>
+      <tbody>
+        <% @items.each do |item| %>
+          <%= render 'item', product_id: item.product_id, quantity: item.quantity %>
+        <% end %>
+      </tbody>
+      <tfoot>
+        <tr>
+          <th colspan="3">
+            TOTAL:
+          </th>
+          <td>
+            <%= humanized_money_with_symbol @order_total/100 %>
+          </td>
+        </tr>
+      </tfoot>
+    </table>
   </div>
 
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
 
 </section>
+
+
