--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -27,9 +27,26 @@
         </li>
         <li>
           <%= link_to 'About Us', :about %>
-      </li>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+
+      <% if current_user %>
+        <li>
+          <label>Hello, <%= current_user.first_name %>!</label>
+        </li>
+        <li>
+          <%= link_to "Logout", "/logout" %>
+        </li>
+      <% else %>
+        <li>
+          <%= link_to "Login", "/login" %>
+        </li>
+        <li>
+          <%= link_to "Signup", "/signup" %>
+        </li>
+      <% end %>
+
        <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 
